# e2e-ts-rs

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  docker-compose.yml  openapi-ts.config.ts  package.json  tsconfig.base.json
.moon/: workspace.yml
apps/server/: Cargo.toml  bacon.toml  moon.yml
apps/server/migrations/: 0001_todos_up.sql
apps/server/src/: main.rs
apps/server/src/db/: mod.rs
apps/server/src/routes/: health.rs  mod.rs  todo.rs
apps/web/: index.html  moon.yml  openapi-ts.config.ts  package.json  tsconfig.json  vite.config.ts
apps/web/src/: index.css  main.tsx  routeTree.gen.ts
apps/web/src/components/ui/: button.tsx  card.tsx  field.tsx  input.tsx  label.tsx
apps/web/src/lib/: env.ts  orpc.ts
apps/web/src/lib/api/: client.gen.ts  sdk.gen.ts  types.gen.ts  zod.gen.ts
apps/web/src/lib/api/client/: client.gen.ts
apps/web/src/routes/: __root.tsx  index.tsx  todo.tsx
