[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bacon = "3.22.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
utoipa = "5.4.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
vld = { version = "0.1.0", features = ["openapi"] }
vld-utoipa = "0.1.0"
